Method to delete schedule created